feat: implement remove message and remove user

--- a/overlays/default/index.html
+++ b/overlays/default/index.html
@@ -15,7 +15,7 @@
     <div id="main-container">
     </div>
     <script type="text/template" id="chatlist_item">
-      <div data-from="{author_id}" data-id="{message_id}">
+      <div data-from="{author_id}" data-platform="{platform}" data-id="{message_id}">
         <span class="meta" style="color: {author_color}">
           <span class="badges">
             {badges}
