--- a/widgets/default/main.html
+++ b/widgets/default/main.html
@@ -1,14 +1,50 @@
-<div id="main-container">
-</div>
-<script type="text/template" id="chatlist_item">
-    <div data-from="{author_id}" data-platform="{platform}" data-id="{message_id}">
-        <span class="meta" style="color: {author_color}">
-            <span class="badges">
-            {badges}
-            </span>
-            <span class="name">{author_display_name}</span>
-        </span>
+<div id="main-container"></div>
 
-        <span class="message">{message}</span>
+<script type="text/template" id="chatlist_item">
+    <div class="message-item" data-from="{author_id}" data-platform="{platform}" data-id="{message_id}">
+        <div class="meta" style="color: {author_color}">
+            <span class="badges">{badges}</span>
+            <span class="name">{author_display_name}</span>
+        </div>
+
+        <div class="message">{message}</div>
+    </div>
+</script>
+
+<script type="text/template" id="donate_item">
+    <div class="donate-item" data-from="{author_id}" data-platform="{platform}" data-id="{message_id}">
+        <div class="meta" style="color: {author_color}">
+            <span class="badges">{badges}</span>
+            <span class="name">{author_display_name}</span>
+        </div>
+
+        <div class="donate-meta">
+            <span class="currency">{currency}</span>
+            <span class="value">{value}</span>
+        </div>
+
+        <div class="message">{message}</div>
+    </div>
+</script>
+
+<script type="text/template" id="sponsor_item">
+    <div class="sponsor-item" data-from="{author_id}" data-platform="{platform}" data-id="{message_id}">
+        <div class="meta" style="color: {author_color}">
+            <span class="badges">{badges}</span>
+            <span class="name">{author_display_name}</span>
+        </div>
+
+        <div class="sponsor-meta">
+            <span class="tier">{tier}</span>
+            <span class="months">{months}</span>
+        </div>
+
+        <div class="message">{message}</div>
+    </div>
+</script>
+
+<script type="text/template" id="raid_item">
+    <div class="raid-item" data-from="{author_id}" data-platform="{platform}" data-id="{message_id}">
+        <div class="message">kkowa is raiding</div>
     </div>
 </script>
