feat: implement sponsor and raid events

--- a/widgets/default/main.html
+++ b/widgets/default/main.html
@@ -45,6 +45,6 @@
 
 <script type="text/template" id="raid_item">
     <div class="raid-item" data-from="{author_id}" data-platform="{platform}" data-id="{message_id}">
-        <div class="message">kkowa is raiding</div>
+        <div class="message">{message}</div>
     </div>
 </script>
