--- a/webapp/public/twitch-await.html
+++ b/webapp/public/twitch-await.html
@@ -47,8 +47,27 @@
             }
         </style>
 
-        <script>
-            window.__TAURI__.event.emit("twitch_raw::event", { type: "idle" }).then(() => console.log("Twitch idle event emitted!"));
+        <script defer>
+            async function dispatchEvent(payload) {
+                payload.timestamp = Date.now();
+                await window.__TAURI__.event.emit("twitch_raw::event", payload)
+                    .then(() => console.log(`Event with type '${payload.type}' dispatched successfully!`))
+                    .catch((err) => {
+                        console.error(`Failed to dispatch event with type '${payload.type}':`, err);
+                        window.__TAURI_PLUGIN_LOG__.error(err);
+                    });
+            }
+
+            async function dispatchIdle() {
+                await dispatchEvent({ type: "idle" });
+                setTimeout(dispatchIdle, 5000);
+            }
+
+            if (document.readyState === "interactive" || document.readyState === "complete") {
+                dispatchIdle();
+            } else {
+                document.addEventListener("DOMContentLoaded", dispatchIdle);
+            }
         </script>
     </head>
     <body>
