--- a/webapp/public/youtube-await.html
+++ b/webapp/public/youtube-await.html
@@ -50,7 +50,7 @@
         <script defer>
             async function dispatchEvent(payload) {
                 payload.timestamp = Date.now();
-                await window.__TAURI__.event.emit("twitch_raw::event", payload)
+                await window.__TAURI__.event.emit("youtube_raw::event", payload)
                     .then(() => console.log(`Event with type '${payload.type}' dispatched successfully!`))
                     .catch((err) => {
                         console.error(`Failed to dispatch event with type '${payload.type}':`, err);
