--- a/widgets/default/main.html
+++ b/widgets/default/main.html
@@ -1,27 +1,27 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" integrity="sha512-q3eWabyZPc1XTCmF+8/LuE1ozpg5xxn7iO89yfSOd5/oKvyqLngoNGsx8jq92Y8eXJ/IRxQbEC+FGSYxtk2oiw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <div id="main-container"></div>
 
 <script type="text/template" id="chatlist_item">
     <div class="message-item" data-from="{author_id}" data-platform="{platform}" data-id="{message_id}">
         <div class="author-meta" style="color: {author_color}">
-            <span class="badges">{badges}</span>
+            <span class="badges">{author_badges}</span>
             <span class="name">{author_display_name}</span>
         </div>
 
-        <div class="message">{message}</div>
+        <div class="message">{message_text}</div>
     </div>
 </script>
 
 <script type="text/template" id="donate_item">
     <div class="donate-item" data-from="{author_id}" data-platform="{platform}" data-id="{message_id}">
         <div class="author-meta" style="color: {author_color}">
-            <span class="badges">{badges}</span>
+            <span class="badges">{author_badges}</span>
             <span class="name">{author_display_name}</span>
         </div>
 
         <div class="message-wrapper">
             <div class="donate-meta">{donate_meta}</div>
-            <div class="message">{message}</div>
+            <div class="message">{message_text}</div>
         </div>
     </div>
 </script>
@@ -29,13 +29,13 @@
 <script type="text/template" id="sponsor_item">
     <div class="sponsor-item" data-from="{author_id}" data-platform="{platform}" data-id="{message_id}">
         <div class="author-meta" style="color: {author_color}">
-            <span class="badges">{badges}</span>
+            <span class="badges">{author_badges}</span>
             <span class="name">{author_display_name}</span>
         </div>
 
         <div class="message-wrapper">
             <div class="sponsor-meta">{sponsor_meta}</div>
-            <div class="message">{message}</div>
+            <div class="message">{message_text}</div>
         </div>
     </div>
 </script>
@@ -43,13 +43,13 @@
 <script type="text/template" id="sponsor-gift_item">
     <div class="spogift-item" data-from="{author_id}" data-platform="{platform}" data-id="{message_id}">
         <div class="message">
-            <span>{message}</span>
+            <span>{sponsor_gift_meta}</span>
         </div>
     </div>
 </script>
 
 <script type="text/template" id="raid_item">
     <div class="raid-item" data-from="{author_id}" data-platform="{platform}" data-id="{message_id}">
-        <div class="message">{message}</div>
+        <div class="message-wrapper">{raid_meta}</div>
     </div>
 </script>
