--- a/widgets/activity-feed/main.html
+++ b/widgets/activity-feed/main.html
@@ -1,7 +1,26 @@
-<div id="main-container"></div>
+<div id="main-container">
+    <div class="actions-container">
+        <button class="toggle-btn-donate toggle-btn-active">
+            DONATE
+        </button>
+        <button class="toggle-btn-sponsor toggle-btn-active">
+            SPONSOR
+        </button>
+        <button class="toggle-btn-sponsor-gift toggle-btn-active">
+            SPONSOR GIFT
+        </button>
+        <button class="toggle-btn-raid toggle-btn-active">
+            RAID
+        </button>
+        <button class="toggle-btn-redemption toggle-btn-active">
+            REDEMPTION
+        </button>
+    </div>
+    <div class="feed-items-container"></div>
+</div>
 
 <script type="text/template" id="feed_item">
-    <div class="feed-item {show_content}" data-from="{author_id}" data-platform="{platform}" data-id="{message_id}">
+    <div class="feed-item {show_content}" data-event-type="{event_type}" data-from="{author_id}" data-platform="{platform}" data-id="{message_id}">
         <div class="feed-item-header">
             <div class="meta">
                 {badges}
