fix: scraper typo

--- a/webapp/public/scraper_idle.html
+++ b/webapp/public/scraper_idle.html
@@ -14,7 +14,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-        <title>Voguh's UniChat - Scrapper Idle</title>
+        <title>Voguh's UniChat - Scraper Idle</title>
 
         <style>
             body {
@@ -36,7 +36,7 @@
     </head>
     <body>
         <span>
-            This scrapper is currently idle
+            This scraper is currently idle
         </span>
     </body>
 </html>
