fix: splash-screen body text

--- a/webapp/public/splash-screen.html
+++ b/webapp/public/splash-screen.html
@@ -54,7 +54,5 @@
             }
         </script>
     </head>
-    <body>
-        [21/21] Loading plugins...
-    </body>
+    <body></body>
 </html>
