refactor: preload static data in main screen

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -2,7 +2,7 @@
 <!--
 /*!******************************************************************************
  * UniChat
- * Copyright (C) 2024-2025 Voguh <voguhofc@protonmail.com>
+ * Copyright (C) 2024-2026 Voguh <voguhofc@protonmail.com>
  *
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -14,9 +14,9 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-        <title>Voguh's UniChat</title>
+        <title>UniChat</title>
     </head>
-    <body>
+    <body style="background: #242424;">
         <div id="root"></div>
         <script type="module" src="src/main.tsx"></script>
     </body>
