--- a/webapp/public/splash-screen.html
+++ b/webapp/public/splash-screen.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <!--
 /*!******************************************************************************
- * UniChat
- * Copyright (C) 2025-2026 Voguh <voguhofc@protonmail.com>
+ * Copyright (c) 2025-2026 Voguh
  *
  * This program and the accompanying materials are made
  * available under the terms of the Eclipse Public License 2.0
