--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <!--
 /*!******************************************************************************
- * UniChat
- * Copyright (C) 2024-2026 Voguh <voguhofc@protonmail.com>
+ * Copyright (c) 2024-2026 Voguh
  *
  * This program and the accompanying materials are made
  * available under the terms of the Eclipse Public License 2.0
@@ -18,7 +17,7 @@
 
         <title>UniChat</title>
     </head>
-    <body style="background: #242424;">
+    <body>
         <div id="root"></div>
         <script type="module" src="src/main.tsx"></script>
     </body>
